tests/e2e/object_assign_regexp.error
Error: syntax error in story at line 2, column 5

2|        server = /re/
          ^^^^^^^^^^^^^

E0100: Can't assign `regexp` to `Object`
